revert back to java 1.8