@@ -50,7 +50,6 @@ public class JaxbValidationsPlugins extends Plugin {
     private static final String NOT_NULL_ANNOTATIONS_CUSTOM_MESSAGES = PLUGIN_OPTION_NAME + ":notNullAnnotationsCustomMessages";
     private static final String VERBOSE = PLUGIN_OPTION_NAME + ":verbose";
     private static final String GENERATE_JPA_ANNOTATIONS = PLUGIN_OPTION_NAME + ":jpa";
-    private static final String GENERATE_SERVICE_VALIDATION_ANNOTATIONS = PLUGIN_OPTION_NAME + ":generateServiceValidationAnnotations";
     private static final String GENERATE_STRING_LIST_ANNOTATIONS = PLUGIN_OPTION_NAME + ":generateStringListAnnotations";
     private static final String NAMESPACE = "http://jaxb.dev.java.net/plugin/code-injector";
 
@@ -64,7 +63,6 @@ public class JaxbValidationsPlugins extends Plugin {
     private String notNullCustomMessage = null;
     private boolean jpaAnnotations = false;
     private boolean generateStringListAnnotations;
-    private String serviceValidationAnnotations;
 
     @Override
     public String getOptionName() {
@@ -91,9 +89,6 @@ public class JaxbValidationsPlugins extends Plugin {
 
         argParser.extractBoolean(GENERATE_JPA_ANNOTATIONS)
                 .ifPresent(v -> jpaAnnotations = v);
-
-        argParser.extractString(GENERATE_SERVICE_VALIDATION_ANNOTATIONS)
-                .ifPresent(v -> serviceValidationAnnotations = v);
 
         argParser.extractBoolean(GENERATE_STRING_LIST_ANNOTATIONS)
                 .ifPresent(v -> generateStringListAnnotations = v);
@@ -751,7 +746,7 @@ public class JaxbValidationsPlugins extends Plugin {
 
     private BigDecimal parseIntegerXsFacet(XSFacet facet) {
         final String str = facet.getValue().value;
-        if (str == null || str.isBlank()) {
+        if (str == null || str.trim().isEmpty()) {
             return null;
         }
 
